// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pipe 1`] = `
{
  "f": [
    [
      "type",
      "FOO",
    ],
    [
      "value",
      "f1--s-foo",
    ],
  ],
}
`;

exports[`pipe 2`] = `
{
  "f": [
    [
      "type",
      "BAR",
    ],
    [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 3`] = `
{
  "f": [
    [
      "type",
      "FOO",
    ],
    [
      "value",
      "f2--s-foo",
    ],
  ],
}
`;

exports[`pipe 4`] = `
{
  "f": [
    [
      "type",
      "BAR",
    ],
    [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 5`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`pipe 6`] = `
{
  "f": [
    [
      "type",
      "BAR",
    ],
    [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 7`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;
